update comile flags to detect future issues